--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-    "dependencies": {
+  "dependencies": {
+    "console.table": "^0.10.0",
     "express": "^4.18.1",
+    "inquirer": "^9.1.0",
     "mysql2": "^2.3.3"
   },
   "repository": {
